assets/styles/variables.scss
$background: #f2eded;
$text: #000000;
$primary: #ffffff;
$secondary: #d9d9d9;

$xs-radius: 40px;
$s-radius: 80px;
$lg-radius: 160px;

$mobile: 430px;
$mobile-tablet: 768px;
$tablet: 1025px;

@mixin button-nav {
  transition: all 0.2s ease;
  &:hover {
    color: rgba($text, 0.5);
  }
  &:active {
    color: rgba($text, 0.7);
  }
}

@mixin font-primary {
  font-family: 'Jost', sans-serif;
  font-weight: 300;
  font-style: normal;
}

@mixin font-secondary {
  font-family: 'Cormorant SC', serif;
  font-weight: 400;
  font-style: normal;
}

@mixin font-fourth {
  font-family: 'Marcellus SC', sans-serif;
  font-weight: 400;
  font-style: normal;
}

@mixin font-tertiary {
  font-family: 'Montserrat', sans-serif;
  font-optical-sizing: auto;
  font-weight: 400;
  font-style: normal;
}

@mixin vertical-margin {
  margin-top: 120px;
  margin-bottom: 120px;

  @media (max-width: $tablet) {
    margin-top: 80px;
    margin-bottom: 80px;
  }
}

@mixin photo-bg {
  background-color: rgba($text, 0.1);
  overflow: hidden;
}

@mixin horizontal-padding {
  padding-left: 127px;
  padding-right: 127px;

  @media (max-width: 1200px) {
    padding-left: 64px;
    padding-right: 64px;
  }

  @media (max-width: $tablet) {
    padding-left: 32px;
    padding-right: 32px;
  }

  @media (max-width: $mobile) {
    padding-left: 16px;
    padding-right: 16px;
  }
}

@mixin grid-content {
  gap: 5vw;
  display: grid;
  grid-template-columns: 1fr 1fr;
  width: 100%;

  @media (max-width: $tablet) {
    grid-template-columns: 1fr;
    gap: 24px;
  }
}

@mixin reset-list {
  list-style: none;
  padding: 0;
  margin: 0;
}

